<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:clickable="true"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_10"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_60"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_76"
            android:layout_toLeftOf="@+id/search_btn"
            android:background="@drawable/search_shape_corner"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_30"
                android:src="@drawable/icon_marchsearch"/>

            <EditText
                android:id="@+id/search_et"
                style="@style/text_white_style_24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/spacing_20"
                android:background="@null"
                android:hint="搜索需要的内容"
                android:textColor="#000000"
                android:textColorHint="#b9b9b9"/>
        </LinearLayout>

        <TextView
            android:id="@+id/search_btn"
            style="@style/text_white_style_28"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/spacing_20"
            android:layout_marginRight="@dimen/spacing_20"
            android:text="搜索"
            android:textColor="#333333"/>


    </RelativeLayout>

    <include layout="@layout/split_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/title_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_100"
            android:layout_marginRight="@dimen/spacing_100"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="30dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/directseeding_rb"
                style="@style/search_titletext_style"
                android:checked="true"
                android:gravity="center"
                android:text="@string/consultation"
                android:textColor="#333333"/>

            <RadioButton
                android:id="@+id/video_rb"
                style="@style/search_titletext_style"
                android:gravity="center"
                android:text="@string/teach"
                android:textColor="#333333"/>

            <RadioButton
                android:id="@+id/consultation_rb"
                style="@style/search_titletext_style"
                android:gravity="center"
                android:text="@string/vadio"
                android:textColor="#333333"/>

            <RadioButton
                android:id="@+id/picture_rb"
                style="@style/search_titletext_style"
                android:gravity="center"
                android:text="@string/music"
                android:textColor="#333333"/>

            <RadioButton
                android:id="@+id/music_rb"
                style="@style/search_titletext_style"
                android:gravity="center"
                android:text="@string/picture"
                android:textColor="#333333"/>
        </RadioGroup>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_20"/>
</LinearLayout>