<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <mr.li.dance.ui.widget.BottomRelativeLayout
            android:id="@+id/new_zx"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            >
            <ImageView
                android:id="@+id/mine_icon"
                style="@style/bottom_icon_style"
                android:layout_centerHorizontal="true"
                android:focusable="false"

                android:src="@drawable/ic_launcher" />
            <TextView
                android:id="@+id/mine_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/new_zx"
                android:textSize="12sp" />
        </mr.li.dance.ui.widget.BottomRelativeLayout>
        <mr.li.dance.ui.widget.BottomRelativeLayout
            android:id="@+id/new_teach"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            >
            <ImageView
                android:id="@+id/teach_icon"
                style="@style/bottom_icon_style"
                android:layout_centerHorizontal="true"
                android:focusable="false"

                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/teach_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teach_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/new_teach"
                android:textSize="12sp" />
        </mr.li.dance.ui.widget.BottomRelativeLayout>

        <mr.li.dance.ui.widget.BottomRelativeLayout
            android:id="@+id/new_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            >

            <ImageView
                android:id="@+id/video_icon"
                style="@style/bottom_icon_style"
                android:layout_centerHorizontal="true"
                android:focusable="false"

                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/video_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/video_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/new_video"
                android:textSize="12sp"/>
        </mr.li.dance.ui.widget.BottomRelativeLayout>

        <mr.li.dance.ui.widget.BottomRelativeLayout
            android:id="@+id/new_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            >
            <ImageView
                android:id="@+id/music_icon"
                style="@style/bottom_icon_style"
                android:layout_centerHorizontal="true"
                android:focusable="false"

                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/music_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/music_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/new_music"
                android:textSize="12sp" />
        </mr.li.dance.ui.widget.BottomRelativeLayout>
        <mr.li.dance.ui.widget.BottomRelativeLayout
            android:id="@+id/new_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            >
            <ImageView
                android:id="@+id/pic_icon"
                style="@style/bottom_icon_style"
                android:layout_centerHorizontal="true"
                android:focusable="false"

                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/pic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pic_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/new_pic"
                android:textSize="12sp" />
        </mr.li.dance.ui.widget.BottomRelativeLayout>

</LinearLayout>